2001-09-15  Darin Adler  <darin@bentspoon.com>

	* gnome-db2html2/sect-elements.c:
	* gnome-db2html2/toc-elements.c:
	Change bugzilla.eazel.com references to point to bugzilla.gnome.org.

2001-08-26  Darin Adler  <darin@bentspoon.com>

	* gnome-db2html2/Makefile.am:
	* gnome-db2html3/Makefile.am:
	* gnome-info2html2/Makefile.am:
	* gnome-man2html2/Makefile.am:
	Remove many unneeded -I directives.

2001-08-25  Philip Langdale  <philipl@mail.utexas.edu>

	* gnome-info2html2/main.c: Duplicated INFOPATH before passing
	to strtok to prevent actual env var getting corrupted.

2001-08-21  Philip Langdale  <philipl@mail.utexas.edu>

        * gnome-info2html2/main.c: Fixed bug preventing INFOPATH being
	parsed.

Sat Jun 17 18:07:19 2000  George Lebl <jirka@5z.com>

	* gnome-info2html2/main.c (main): Use g_free on the node as it
	  has been allocated with g_malloc

	* gnome-man2html2/gnome-man2html.c (scan_format):  Patch from gnome
	  bug number 3925.  From the description: Briefly, gnome-man2html
	  doesn't notice when the format lines in table declarations end if
	  the last thing in the format specification is a font command. 

2000-04-05  Darin Adler  <darin@eazel.com>

	* gnome-db2html2/gdb3html.c: Removed some unnecessary \n from g_errors.

2000-03-09  Darin Adler  <darin@eazel.com>

	* gnome-info2html2/main.c (main): Fixed a warning.

2000-02-11  Jonathan Blandford  <jrb@redhat.com>

	* gnome-db2html2/toc-elements.c: removed TIP, NOTE, WARNING, and
	GRAPHIC from the TOC

	* gnome-db2html2/TODO: added TODO

2000-02-10  Jonathan Blandford  <jrb@redhat.com>

	* gnome-db2html2/sect-elements.c: added cdata support

2000-02-09  Jonathan Blandford  <jrb@redhat.com>

	* gnome-db2html2/sect-elements.c: added many more fields.  Now, we
	just need tables, figures, and CDATA and we're pretty much done
	with a rough cut.

2000-02-08  Jonathan Blandford  <jrb@redhat.com>

	* gnome-db2html2/sect-elements.c: started program listing.
	doubting SAX's strictness big time.
