@@ -1,3 +1,8 @@
+2001-09-20  Darin Adler  <darin@bentspoon.com>
+
+	* gnome-db2html2/gdb3html.h: Change libxml includes to use
+	#include <libxml/*> instead of #include <gnome-xml/*>.
+
 2001-09-15  Darin Adler  <darin@bentspoon.com>
 
 	* gnome-db2html2/sect-elements.c:
